[package]
name = "cargo-sym"
version = "0.0.3"
authors = ["m4b <m4b.github.io@gmail.com>"]
keywords = ["cargo", "cargo-subcommand", "crates", "symbols", "debug"]
readme = "README.md"
repository = "https://github.com/m4b/cargo-sym"
license = "MIT"
description = "Prints various binary symbols in your crate"

[dependencies]
goblin = {git = "https://github.com/m4b/goblin", version = "0.0.6"}
rustc-demangle = "0.1.2"
clap = "2.16.4"
toml = "0.2"
capstone = {git = "https://github.com/m4b/capstone-rs", version = "0.1.0"}
quick-error = "1.1.0"
