[package]
name = "cargo-sym"
version = "0.0.4"
authors = ["m4b <m4b.github.io@gmail.com>"]
keywords = ["cargo", "cargo-subcommand", "crates", "symbols", "debug"]
readme = "README.md"
repository = "https://github.com/m4b/cargo-sym"
license = "MIT"
description = "Prints various binary symbols in your crate"

[dependencies]
goblin = { git = "https://github.com/m4b/goblin", branch = "pe"}
scroll = { git = "https://github.com/m4b/scroll"}
rustc-demangle = "0.1.2"
clap = "2.16.4"
toml = "0.2"
walkdir = "1.0.1"
#error-chain = "0.5.0"
capstone3 = "0.1.0"
quick-error = "1.1.0"

[features]
# for now this allows to build on OSX as something is wrong with capstone-sys ./build.sh script
default = ["capstone3/build_capstone_src_cmake"]
build_capstone_src = ["capstone3/build_capstone_src"]
